<resources>
    <string name="app_name">AllNight</string>
    <string name="social_login">Sign in with social media</string>
    <string name="first_page_description">Would you like to receive\ncocktail recipes?</string>
    <string name="first_page_yes_please">Yes, I like it</string>
    <string name="first_page_no_thanks">I want to go home.</string>
    <string name="what_ingredients_do_you_have">Insert your collection</string>
    <string name="you_can_choose_multiple_items">More than one can be selected</string>
    <string name="search_ingredients_hint">ex) Vodca</string>
    <string name="favorite_recipe">Scrapped recipes</string>
    <string name="settings">Settings</string>
    <string name="filter_alcohol_all">All</string>
    <string name="filter_alcohol_only">Alcohol</string>
    <string name="filter_alcohol_none">Non-alcohol</string>
    <string name="filter_apply">Apply</string>
    <string name="contact">Contact</string>
    <string name="favorite">Scrap</string>
    <string name="start">Start Party!</string>
    <string name="filter_number_of_ingredients">Number of\ningredients</string>

    <string name="title_activity_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="alcoholic_header">Alcoholic default</string>
    <!-- Messages Preferences -->
    <string name="show_alcoholic_title">Show alcoholic default</string>
    <string name="show_non_alcohol_title">Show non-alcoholic default</string>

    <string name="alert_dialog_title">Inquiry</string>
    <string name="alert_dialog_message">Please leave a review on Google Play.</string>
    <string name="alert_dialog_ok">Ok</string>

    <string name="bucket_title">Bucket</string>
    <string name="find_recipe">Find Recipe</string>
    <string name="search_results">Search Results</string>
</resources>
