<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/alcoholic_header"
            app:iconSpaceReserved="false">
        <SwitchPreference
                app:defaultValue="true"
                app:key="show_alcohol"
                app:title="@string/show_alcoholic_title"
                app:switchTextOff="OFF"
                app:switchTextOn="ON"
                app:iconSpaceReserved="false"/>
        <SwitchPreference
                app:defaultValue="true"
                app:key="show_non_alcohol"
                app:title="@string/show_non_alcohol_title"
                app:switchTextOff="OFF"
                app:switchTextOn="ON"
                app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/app_name"
            app:iconSpaceReserved="false">
    <Preference
            app:title="Developers"
            app:summary="김주진, 노아론, 연아림, 기우영, 김다롬"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
